# CSQR-D

./: .gitignore  QRscanner.py  README.md  binarizer.py  data.py  decoder.py  evr_test.py  evr_test_log.txt  find_qr.py  hand.py  homographic_correct.py  interpolation_correct.py  samples_print.docx  sobel.py  tools.py  topology_correct.py  visualization.py  visualization0.py  visualization1.py  visualization2.py
results/: evr_test_log001.txt  evr_test_log002.txt  evr_test_log003.txt  evr_test_log004.txt  evr_test_log005.txt  evr_test_log006.txt  evr_test_log007.txt  evr_test_log008.txt  evr_test_log009.txt
scr/cpp/: CMakeLists.txt  TPS_correct.cpp  decoder.cpp  decoder.hpp  find_qr.hpp  homographic_correct.cpp  interpolation_correct.hpp
src/cpp/: QRscanner.cpp  QRscanner.hpp  TPS_correct.hpp  binarizer.cpp  binarizer.hpp  find_qr.cpp  homographic_correct.hpp  interpolation_correct.cpp  main.cpp  math_base.cpp  math_base.hpp  tools.cpp  tools.hpp  vectorfield_correct.cpp  vectorfield_correct.hpp
src/python/: QRscanner.py  QRscannerBestQuality.py  TPS_correct.py  binarizer.py  data.py  decoder.py  find_qr.py  hand.py  homographic_correct.py  interpolation_correct.py  math_base.py  sobel.py  tools.py  topology_correct.py  vectorfield_correct.py
src/test/: evr_test.py  evr_test_cpp.py  visualization.py  visualization0.py  visualization1.py  visualization2.py  visualization3.py  visualization_ts.py
zxing-cpp_finder/: CMakeLists.txt  finder_candidates.cpp  finder_candidates.h  main.cpp  pybinarize.pyd  ts.cpp  ts.py  zxing_binarize.cpp
